@@ -5,4 +5,6 @@ import fi.iki.elonen.NanoHTTPD.Response;
 
 public interface IURIHandler {
 	public Response serve(IHTTPSession session);
+
+	public String getPermission();
 }
