@@ -46,4 +46,9 @@ public class URIHandlerSendString implements IURIHandler {
 		if(actuallyServe(session)) return new Response(Response.Status.OK, NanoHTTPD.MIME_PLAINTEXT, "EEYUP");
 		else return new Response(Response.Status.OK, NanoHTTPD.MIME_PLAINTEXT, "NNOPE");
 	}
+
+	@Override
+	public String getPermission() {
+		return "message";
+	}
 }
